--- a/ZbW.Testing.WpfSample.Client.IntegrationTests/ZbW.Testing.WpfSample.Client.IntegrationTests.csproj
+++ b/ZbW.Testing.WpfSample.Client.IntegrationTests/ZbW.Testing.WpfSample.Client.IntegrationTests.csproj
@@ -1,10 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="3.2.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="FakeItEasy" Version="7.3.0" />
     <PackageReference Include="FakeItEasy.Analyzer.CSharp" Version="6.1.0">
       <PrivateAssets>all</PrivateAssets>
